# snowball

./: .gitignore  Cargo.toml  README  build.sh  communicationprotocol.md  console.html  console.js  run.sh  snowball.cabal  stack.yaml
cljserver/: CHANGELOG.md  README.md  project.clj
cljserver/src/frost_fighters/: core.clj  game.clj
cljserver/test/frost_fighters/: core_test.clj
frost_fighters/: .gitignore  README.md  mix.exs
frost_fighters/config/: config.exs
frost_fighters/lib/: frost_fighters.ex  frost_fighters_router.ex  frost_fighters_socket_handler.ex
frost_fighters/test/: frost_fighters_test.exs
public/: console.html  console.js  game.js  index.html  input.js  level.js  style.css
public/assets/: arrow.xcf  bush.xcf  healthbar.xcf  map.json  map.tmx  maptiles.json  platform-concrete.xcf  platform-dirt.xcf  platform.xcf  powerbar.xcf  snowball.xcf  snowman.xcf  stone.xcf  tileset.json  tileset.tps  trunk.xcf
pyserver/: game.py  level.py  main.py  player.py  start_server.sh  util.py  vec.py
src/: Chat.hs  Game.hs  Level.hs  Main.hs  NetworkUtils.hs  Player.hs  ServerTypes.hs  entities.rs  game.rs  level.rs  lobby.rs  main.rs  maploading.rs  vec2.rs
