Name:                snowball
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             AllRightsReserved
Author:              Author
Maintainer:          maintainer@example.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable snapTest
  hs-source-dirs: src
  main-is: Main.hs
  other-modules: Chat

  Build-depends:
                aeson,
                base                      >= 4     && < 5,
                bytestring                >= 0.9.1 && < 0.11,
                engine-io,
                engine-io-snap,
                monad-control             >= 1.0   && < 1.1,
                mtl                       >= 2     && < 3,
                snap-core                 >= 1.0   && < 1.1,
                snap-server               >= 1.0   && < 1.1,
                socket-io,
                stm,
                text,
                transformers

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
