Name:                snowball
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             AllRightsReserved
Author:              Author
Maintainer:          maintainer@example.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable snowball
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends: base             >= 4        && < 5
               , bytestring       >= 0.10     && < 0.11
               , containers
               , process          >= 1.2      && < 1.7
               , snap-core        >= 1.0      && < 1.1
               , snap-server      >= 1.0      && < 1.1
               , stm
               , websockets       >= 0.9.5    && < 0.13
               , websockets-snap >= 0.10.0.0 && < 0.11

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
